// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav should match the snapshot for authenticated large screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "id": 1243,
      "name": "mocky mcmockerson",
      "photo": Object {
        "photo_link": "http://placekitten.com/g/400/400",
        "thumb_link": "http://placekitten.com/g/200/200",
      },
    }
  }
/>
`;

exports[`Nav should match the snapshot for authenticated medium screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "id": 1243,
      "name": "mocky mcmockerson",
      "photo": Object {
        "photo_link": "http://placekitten.com/g/400/400",
        "thumb_link": "http://placekitten.com/g/200/200",
      },
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated large screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "id": 1243,
      "name": "mocky mcmockerson",
      "photo": Object {
        "photo_link": "http://placekitten.com/g/400/400",
        "thumb_link": "http://placekitten.com/g/200/200",
      },
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated medium screens 2`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;

exports[`Nav should match the snapshot for unauthenticated small screens 1`] = `
<Nav
  localeCode="en-US"
  media={Object {}}
  self={
    Object {
      "status": "prereg",
    }
  }
/>
`;
